Misc fixes; also updated to v5.0.3
- Updated gradle build to avoid
https://bugs.openjdk.java.net/browse/JDK-8254920
- Fixed minor log statement in TntDb